# cllm

./: .gitignore  README.md  pyproject.toml
cllm/: __init__.py  cli.py  config.py  db_export.py  metrics.py  models.py  report.py  utils.py  verification.py
cllm/prompts/: compare.txt  extract.txt  extract_expected.txt  llm_eval.txt  llm_group.txt  peer_eval.txt  prompt_fallback.py  score_elife.txt
tests/llpaper1_elife-59610/: claims.json  cmp.json  cmp_with_reasoning.json  eval_llm.json  eval_peer.json  eval_peers.json  metrics_cmp.json  metrics_eval_llm.json  metrics_eval_peer.json  metrics_extract.json  v1paper.txt  v1reviews.txt
tests/lppaper1_elife-32920/: claims.json  cmp.json  compare_enhanced.json  eval_llm.json  eval_peer.json  metrics_cmp.json  metrics_eval_llm.json  metrics_eval_peer.json  metrics_extract.json  v1paper.txt  v1responses.txt  v1reviews.txt  v2paper.txt
tests/lppaper2_elife-43803/: claims.json  cmp.json  eval_llm.json  eval_peer.json  metrics_cmp.json  metrics_eval_llm.json  metrics_eval_peer.json  metrics_extract.json  schema.dot  tmp.sql  v1responses.txt  v1reviews.txt  v2paper.txt
tests/lppaper3_elife-43803/: v1paper.txt
tests/sbpaper1-seqspec/: claims.json  cmp.json  eval_llm.json  eval_peer.json  manuscript.txt  metrics_cmp.json  metrics_eval_llm.json  metrics_eval_peer.json  metrics_extract.json
tests/sbpaper1-seqspec/tmp/: CHEATSHEET.py  README.md  advanced_pdf_table.py  claims.json  cmp.json  compare_enhanced.json  eval_llm.json  eval_peer.json  json_to_pdf_table.py  metrics_cmp.json  metrics_eval.json  metrics_eval_peer.json  (+3 more)
