[project]
name = "cllm"
version = "1.0.0"
description = "CLI tool for scientific claim extraction, evaluation, and comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
cllm = "cllm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
